--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,50 @@
-name: Test Documentation Webhook
+name: Test Auto Documentation
 on:
   push:
     branches: [ main, master ]
+
 jobs:
-  notify:
+  notify-service:
     runs-on: ubuntu-latest
     steps:
-    - name: Send to documentation service
+    - name: Checkout
+      uses: actions/checkout@v4
+      
+    - name: Send webhook to documentation service
       run: |
         curl -X POST \
           -H "Content-Type: application/json" \
           -d '{
-            "ref": "refs/heads/main",
+            "ref": "${{ github.ref }}",
+            "before": "${{ github.event.before }}",
+            "after": "${{ github.event.after }}",
             "repository": {
+              "id": ${{ github.event.repository.id }},
               "name": "${{ github.event.repository.name }}",
-              "full_name": "${{ github.event.repository.full_name }}"
+              "full_name": "${{ github.event.repository.full_name }}",
+              "owner": {
+                "login": "${{ github.event.repository.owner.login }}",
+                "id": ${{ github.event.repository.owner.id }}
+              },
+              "html_url": "${{ github.event.repository.html_url }}",
+              "default_branch": "${{ github.event.repository.default_branch }}"
             },
-            "commits": [{"message": "test commit"}]
+            "commits": [{
+              "id": "${{ github.sha }}",
+              "message": "${{ github.event.head_commit.message }}",
+              "timestamp": "${{ github.event.head_commit.timestamp }}",
+              "author": {
+                "login": "${{ github.actor }}",
+                "id": ${{ github.event.sender.id }}
+              },
+              "url": "${{ github.event.head_commit.url }}",
+              "added": [],
+              "removed": [],
+              "modified": []
+            }],
+            "pusher": {
+              "login": "${{ github.actor }}",
+              "id": ${{ github.event.sender.id }}
+            }
           }' \
           https://abc123.ngrok.io/api/webhook/github/push
